feat: protege rotas de usuarios com autenticacao JWT
