# backend/src/routes/taskRoutes.ts
@@ -7,10 +7,10 @@ const router = Router();
 
 router.use(authMiddleware);
 
-router.get('/', TaskController.index);
-router.get('/:id', TaskController.show);
-router.post('/', TaskController.create);
-router.put('/:id', TaskController.update);
-router.delete('/:id', TaskController.delete);
+router.get('/', authMiddleware, TaskController.index);
+router.get('/:id', authMiddleware, TaskController.show);
+router.post('/', authMiddleware, TaskController.create);
+router.put('/:id', authMiddleware, TaskController.update);
+router.delete('/:id', authMiddleware, TaskController.delete);
 
 export { router as taskRoutes };
